test/files/neg/t8849.check
t8849.scala:8: error: ambiguous implicit values:
 both lazy value global in object Implicits of type => scala.concurrent.ExecutionContext
 and value dummy of type scala.concurrent.ExecutionContext
 match expected type scala.concurrent.ExecutionContext
    require(implicitly[ExecutionContext] eq dummy)
                      ^
one error found
